--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/static/styles/style.css">
-    <link rel="stylesheet" href="/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="static/styles/style.css">
+    <link rel="stylesheet" href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="dark.js" defer></script>
     <script src="main.js" defer></script>
 
