--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <aside>
         
 
-                <img src="/static/imgs/myPhoto1.jpg" alt="myPhoto">
+                <img src="static/imgs/myPhoto1.jpg" alt="myPhoto">
                 <p>Кузнецов Владислав Александрович</p>
                 <p>DevOps Engineer</p>
                 <p class="salarySB">100 000 тыс. рублей</p>
