--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="resumeDevOps/static/styles/style.css">
-    <link rel="stylesheet" href="resumeDevOps/static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <title>DevOps Resume</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="static/styles/style.css">
+    <link rel="stylesheet" href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="dark.js" defer></script>
     <script src="main.js" defer></script>
 
@@ -16,7 +17,7 @@
 
 
     <header>
-        <button class="btn" id="nightModeBtn"><img src="/static/imgs/night-mode.png" alt="nigth"
+        <button class="btn" id="nightModeBtn"><img src="static/imgs/night-mode.png" alt="nigth"
                 class="nightModeIcon"></button>
         <h1>Информационная страница обо мне</h1>
         <button id="hireBtn" onclick="hireBtn()">Нанять</button>
@@ -120,7 +121,7 @@
             <aside>
         
 
-                <img src="/static/imgs/myPhoto1.jpg" alt="myPhoto">
+                <img src="static/imgs/myPhoto1.jpg" alt="myPhoto">
                 <p>Кузнецов Владислав Александрович</p>
                 <p>DevOps Engineer</p>
                 <p class="salarySB">100 000 тыс. рублей</p>
@@ -135,14 +136,14 @@
 
     <footer>
         <div class="social-media__container">
-            <a href="https://t.me/w1z4rdWP" class="social_links" target="_blank"><img src="/static/imgs/tg.jpg"
+            <a href="https://t.me/w1z4rdWP" class="social_links" target="_blank"><img src="static/imgs/tg.jpg"
                     alt="tg: w1z4rdwp" class="social-icons" id="tg"></a>
             <a href="https://hh.ru/resume/06af73f8ff08d077510039ed1f586d31435673" class="social_links"
-                target="_blank"><img src="/static/imgs/HH.jpg" alt="my_resume" class="social-icons" id="hhru"></a>
-            <a href="https://vk.com/w1z4rdwp" class="social_links" target="_blank"><img src="/static/imgs/vk.png"
+                target="_blank"><img src="static/imgs/HH.jpg" alt="my_resume" class="social-icons" id="hhru"></a>
+            <a href="https://vk.com/w1z4rdwp" class="social_links" target="_blank"><img src="static/imgs/vk.png"
                     alt="myvk" class="social-icons" id="vk"></a>
             <a href="https://github.com/W1z4RdWP" class="social_links" target="_blank"><img
-                    src="/static/imgs/github.svg" alt="github" class="social-icons" id="github"></a>
+                    src="static/imgs/github.svg" alt="github" class="social-icons" id="github"></a>
         </div>
         <div class="bottom-footer">
             <div class="line"></div>
