Changed myPhoto, added info to education block. Changed font-size for hireBtn for mobiles

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <ul>WorldSkills Russia (20/20 баллов)</ul>
                 <ol>2022-2026 СГТУ (Факультет "Прикладные информационные технологии" Специальность: Информационные
                     системы и технологии)</ol>
+                <ul>Skillbox Профессия DevOps Инжинер PRO 2.0.</ul>
 
             </li>
             <!-- Образование: Укажите ваше образование, включая университет или колледж, который вы закончили, и специальность,
