DevOps changed to SysAdmin

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Эл. почта: kuznets.vlad2002@bk.ru</p>
             </em>
         </div>
-        <h3>DevOps Engineer</h3>
+        <h3>System Administrator</h3>
         <hr>
         <div class="experienceBlock">
             <h3 id="SmileTerr">ООО "32 Жемчужины"</h3>
