added certificates block and media fixed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button class="btn" id="nightModeBtn"><img src="static/imgs/night-mode.png" alt="nigth"
                 class="nightModeIcon"></button>
         <h1>Информационная страница обо мне</h1>
+        <button id="showCertificatesBtn" onclick="showCertificatesBtn()">Сертификаты</button>
         <button id="hireBtn" onclick="hireBtn()">Нанять</button>
     </header>
     <main>
@@ -132,6 +133,20 @@
             </aside>
         </div>
     </div>
+
+    <div class="certificates">
+        <div class="certificates__box">
+            <button id="hideMeBtn" onclick="hideMe()"><i class="fa fa-minus-square-o" aria-hidden="true"></i></button>
+
+
+                <img src="static/imgs/certificates/cert_Python1.png" alt="myCrt">
+                <img src="static/imgs/certificates/cert_StartDevOps.png" alt="myCrt">
+
+
+        
+        </div>
+    </div>
+
 
 
 
