docker cert added

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
             <button id="hideMeBtn" onclick="hideMe()"><i class="fa fa-minus-square-o" aria-hidden="true"></i></button>
 
 
-                <img src="static/imgs/certificates/cert_Python1.png" alt="myCrt">
-                <img src="static/imgs/certificates/cert_StartDevOps.png" alt="myCrt">
+                <img src="static/imgs/certificates/cert_Python1.png" alt="myCrt1">
+                <img src="static/imgs/certificates/cert_StartDevOps.png" alt="myCrt2">
+                <img src="static/imgs/certificates/cert_Docker.png" alt="myCrt3">
 
 
         
