changed hireBtn color to green

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="static/imgs/myPhoto1.jpg" alt="myPhoto">
                 <p>Кузнецов Владислав Александрович</p>
                 <p>DevOps Engineer</p>
-                <p class="salarySB">100 000 тыс. рублей</p>
+                <p class="salarySB">от 100 000 тыс. рублей</p>
                 <i>Дополнительные способы связи, указаны внизу данной страницы</i>
         
         
