--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <img src="static/imgs/certificates/cert_Python1.png" alt="myCrt1">
                 <img src="static/imgs/certificates/cert_StartDevOps.png" alt="myCrt2">
                 <img src="static/imgs/certificates/cert_Docker.png" alt="myCrt3">
-
+                <img src="static/imgs/certificates/cert_DevOps_Basics.png" alt="myCrt4">
 
         
         </div>
